<resources>
    <string name="app_name">Project 0</string>

    <string name="top_title">Andriod Nanodegree Projects</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="super_duo_1">Football Scores</string>
    <string name="super_duo_2">Library</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone</string>
</resources>
